--- a/app/index.html
+++ b/app/index.html
@@ -34,6 +34,8 @@
         <h3>Выберете участников проекта</h3>
         <div class="render"></div>
     </div>
+    <script src="lib/react/react.min.js"></script>
+    <script src="lib/underscore/underscore-min.js"></script>
     <script src="js/main.js"></script>
 </body>
 
